Revert original gitlab-ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,6 @@ include:
 
 stages:
 - lint
-- pytest
-# Run code quality and other stuff later
 - test
 
 variables:
@@ -20,21 +18,28 @@ flake8:
   stage: lint
   image: python:3.8-alpine
   before_script:
-  - ./.ci-scripts/flake8_before.sh
+  - pip install -q flake8
   script:
-  - ./.ci-scripts/flake8_run.sh
+  - flake8
 
 pytest:
-  stage: pytest
+  stage: test
   image: docker:24.0.6-dind
   services:
   - docker:dind
   before_script:
-    - ./.ci-scripts/pytest_before.sh
+  - apk add make
+  - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+  - export COMPOSE_PROJECT_NAME=$CI_PIPELINE_ID
+  - ".ci-scripts/pull_images.sh"
+  - make build
+  - ".ci-scripts/push_images.sh"
+  - make migrate
+  - make run
   script:
-    - ./.ci-scripts/pytest_run.sh
+  - make coverage.xml
   after_script:
-    - ./.ci-scripts/pytest_after.sh
+  - make clean
   artifacts:
     reports:
       coverage_report:
