Try again for cleanup job

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,6 +61,12 @@ sast:
   stage: test
 
 final_clean:
+  image: docker:24.0.6-dind
+  services:
+  - docker:dind
+  before_script:
+  - apk add make
+  - export COMPOSE_PROJECT_NAME=$CI_PIPELINE_ID
   stage: cleanup
   rules:
     - when: always # run even if something failed
