--- a/compose.yml
+++ b/compose.yml
@@ -51,6 +51,8 @@ services:
       default: {}
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0
+    healthcheck:
+      test: ["CMD", "gobgp", "global"]
 
   translator:
     build:
