Why: Add new env variables to build. Values are nonsense.
*

This change addresses the need by:

*

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 CI_PROJECT_DIR=.
+SCRAM_PEERING_IFACE=eth1
+SCRAM_V4_SUBNET=10.124.0.0/24
+SCRAM_V4_GATEWAY=10.124.0.1
+SCRAM_V4_ADDRESS=10.124.0.4
+SCRAM_V6_SUBNET=2004:600:202:9::8/126
+SCRAM_V6_GATEWAY=2004:600:202:9::9
+SCRAM_V6_ADDRESS=2004:600:202:9::a
+HOSTNAME=$(hostname)
