--- a/compose.override.local.yml
+++ b/compose.override.local.yml
@@ -13,9 +13,23 @@ services:
     volumes:
       - $CI_PROJECT_DIR:/app:z
       - /tmp/profile_data:/tmp/profile_data
-    env_file:
-      - ./.envs/.local/.django
-      - ./.envs/.local/.postgres
+    environment:
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=scram
+      - POSTGRES_USER=scram
+      - POSTGRES_PASSWORD=scram
+      - DJANGO_READ_DOT_ENV_FILE=True
+      - DJANGO_SETTINGS_MODULE=config.settings.production
+      - DJANGO_SECRET_KEY=DJANGO_SECRET_KY
+      - DJANGO_ADMIN_URL=admin/
+      - DJANGO_ALLOWED_HOSTS=django
+      - DJANGO_SECURE_SSL_REDIRECT=True
+      - DJANGO_SERVER_EMAIL=test@test.com
+      - WEB_CONCURRENCY=4
+      - SCRAM_AUTH_METHOD=local
+      - POSTGRES_SSL=False
+      - REDIS_URL=redis://redis:6379/0
     healthcheck:
       test: ["CMD", "curl", "-f", "http://django:8000/process_expired/"]
     ports:
@@ -25,8 +39,12 @@ services:
     volumes:
       - local_postgres_data:/var/lib/postgresql/data:Z
       - local_postgres_data_backups:/backups:z
-    env_file:
-      - ./.envs/.local/.postgres
+    environment:
+      - POSTGRES_HOST=postgres
+      - POSTGRES_PORT=5432
+      - POSTGRES_DB=scram
+      - POSTGRES_USER=scram
+      - POSTGRES_PASSWORD=scram
 
   docs:
     image: scram_local_docs
