--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -1,4 +1,6 @@
+
 ---
+version: '3.4'
 
 volumes:
   local_postgres_data: {}
@@ -84,13 +86,11 @@ services:
       default: {}
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0
-    environment:
-      - HOSTNAME=${HOSTNAME}
     volumes:
       - ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt/live/${HOSTNAME}/fullchain.pem:/etc/ssl/server.crt
-      - /etc/letsencrypt/live/${HOSTNAME}/privkey.pem:/etc/ssl/server.key
-      - ./staticfiles:/staticfiles
+      - /etc/scram/ssl/server.crt:/etc/ssl/server.crt
+      - /etc/scram/ssl/server.key:/etc/ssl/server.key
+      - ./staticfiles:/staticfiles:rw,z
     ports:
       - "443:443"
       - "80:80"
@@ -114,3 +114,4 @@ networks:
           gateway: ${SCRAM_V4_GATEWAY}
         - subnet: ${SCRAM_V6_SUBNET}
           gateway: ${SCRAM_V6_GATEWAY}
+
