Why: Modify compose.yml in ordr to try to get the boot up order correct. From what I can tell, podman does not pay attention to this information so it is mostly cosmetic and asperational.
*

This change addresses the need by:

*

--- a/compose.yml
+++ b/compose.yml
@@ -60,6 +60,8 @@ services:
         condition: service_healthy
       gobgp:
         condition: service_healthy
+      djengo:
+        condition: service_healthy
     networks:
       default: {}
     sysctls:
