--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -60,7 +60,7 @@ services:
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0
     volumes:
-      - ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./compose/production/nginx:/etc/nginx/conf.d
       - /etc/scram/ssl/server.crt:/etc/ssl/server.crt
       - /etc/scram/ssl/server.key:/etc/ssl/server.key
       - ./staticfiles:/staticfiles:rw,z
