--- a/.gitignore
+++ b/.gitignore
@@ -162,6 +162,7 @@ typings/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+*.code-workspace
 
 
 # Provided default Pycharm Run/Debug Configurations should be tracked by git
