--- a/compose/local/translator/Dockerfile
+++ b/compose/local/translator/Dockerfile
@@ -15,14 +15,16 @@ COPY ./translator/requirements.txt /requirements.txt
 RUN pip install -r /requirements.txt
 
 RUN mkdir /app \
-    && cd /app \
-    && git clone -b v2.32.0 https://github.com/osrg/gobgp.git \
-    && cd gobgp/api \
-    && python3 -m grpc_tools.protoc -I./ --python_out=/app/ --grpc_python_out=/app/ *.proto
+  && cd /app \
+  && git clone -b v2.32.0 https://github.com/osrg/gobgp.git \
+  && cd gobgp/api \
+  && python3 -m grpc_tools.protoc -I./ --python_out=/app/ --grpc_python_out=/app/ *.proto
 
 COPY ./translator/translator.py /app
 COPY ./translator/gobgp.py /app
-COPY ./translator/tests /app
+COPY ./translator/exceptions.py /app
+COPY ./translator/shared.py /app
+
 RUN chmod +x /app/translator.py
 
 WORKDIR /app
