--- a/compose.override.local.yml
+++ b/compose.override.local.yml
@@ -57,6 +57,9 @@ services:
       - "179"
       - "50051"
 
+  translator:
+    volumes:
+      - ./translator/tests/:/app/tests/
 networks:
   default:
     ipam:
