--- a/compose.override.local.yml
+++ b/compose.override.local.yml
@@ -21,6 +21,7 @@ services:
       test: ["CMD", "curl", "-f", "http://django:8000/process_expired/"]
     ports:
       - "8000"
+      - 3000:3000
 
   postgres:
     volumes:
@@ -56,6 +57,12 @@ services:
     ports:
       - "179"
       - "50051"
+
+  translator:
+    volumes:
+      - ./translator/tests/:/app/tests/
+    ports:
+      - "5678"
 
 networks:
   default:
