--- a/compose.override.local.yml
+++ b/compose.override.local.yml
@@ -62,7 +62,9 @@ services:
     volumes:
       - ./translator/tests/:/app/tests/
     ports:
-      - "5678"
+      - 3001:3001
+    entrypoint: python3
+    command: "-m debugpy --listen 0.0.0.0:3001 translator.py"
 
 networks:
   default:
