feat: debug ALL the things!

--- a/compose/local/translator/Dockerfile
+++ b/compose/local/translator/Dockerfile
@@ -11,8 +11,8 @@ RUN apt-get update \
   && rm -rf /var/lib/apt/lists/*
 
 # Requirements are installed here to ensure they will be cached.
-COPY ./translator/requirements.txt /requirements.txt
-RUN pip install -r /requirements.txt
+COPY ./translator/requirements /requirements
+RUN pip install -r /requirements/base.txt
 
 RUN mkdir /app \
   && cd /app \
