--- a/compose.override.local.yml
+++ b/compose.override.local.yml
@@ -36,6 +36,9 @@ services:
     ports:
       - "8000"
       - 3000:3000
+    environment:
+      # This can be set to either `debugpy` or `pycharm-pydevd` currently.
+      - DEBUG=${DEBUG}
 
   postgres:
     volumes:
@@ -81,8 +84,9 @@ services:
       - ./translator/tests/:/app/tests/
     ports:
       - 3001:3001
-    entrypoint: python3
-    command: "-m debugpy --listen 0.0.0.0:3001 translator.py"
+    environment:
+      # This can be set to either `debugpy` or `pycharm-pydevd` currently.
+      - DEBUG=${DEBUG}
 
 networks:
   default:
