--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,6 @@ __pycache__/
 # Ignore prod nginx files so git doesnt think we've locally added new files when deploying templates with ansible
 compose/production/nginx
 
-.idea/
-.idea/*
-.idea/scram.iml
-*.iml
-
 # C extensions
 *.so
 
@@ -172,7 +167,13 @@ typings/
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-.idea/*
+# Allow Debugger Files
+/.idea/runConfigurations/*.xml
+/.idea/inspectionProfiles
+!.idea/runConfigurations/*_Debugger.xml
+
+.idea/scram.iml
+*.iml
 
 # User-specific stuff:
 .idea/**/workspace.xml
