ci: change ports to avoid CI conflict

--- a/compose.override.local.yml
+++ b/compose.override.local.yml
@@ -35,10 +35,10 @@ services:
       test: ["CMD", "curl", "-f", "http://django:8000/process_expired/"]
     ports:
       - "8000"
-      - 3000:3000
+      - 56780:56780
     environment:
       # This can be set to either `debugpy` or `pycharm-pydevd` currently.
-      - DEBUG=${DEBUG}
+      - DEBUG=${DEBUG:-}
 
   postgres:
     volumes:
@@ -83,10 +83,10 @@ services:
     volumes:
       - ./translator/tests/:/app/tests/
     ports:
-      - 3001:3001
+      - 56781:56781
     environment:
       # This can be set to either `debugpy` or `pycharm-pydevd` currently.
-      - DEBUG=${DEBUG}
+      - DEBUG=${DEBUG:-}
 
 networks:
   default:
