ci: collapse cleanup into test stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,6 @@ include:
 stages:
 - lint
 - test
-- cleanup
 
 variables:
   POSTGRES_USER: scram
@@ -63,13 +62,13 @@ sast:
   stage: test
 
 final_clean:
+  stage: test
   image: docker:24.0.6-dind
   services:
   - docker:dind
   before_script:
   - apk add make
   - export COMPOSE_PROJECT_NAME=$CI_PIPELINE_ID
-  stage: cleanup
   rules:
     - when: always # run even if something failed
   script:
