ci: try adding needs to stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,15 +62,19 @@ sast:
   stage: test
 
 final_clean:
-  stage: test
   image: docker:24.0.6-dind
   services:
   - docker:dind
   before_script:
   - apk add make
   - export COMPOSE_PROJECT_NAME=$CI_PIPELINE_ID
+  stage: test
   rules:
     - when: always # run even if something failed
   script:
     - make stop
     - make clean
+  needs:
+    - pytest
+    - gemnasium-dependency_scanning
+    - sast
