--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ pytest:
   before_script:
   - apk add make
   - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-  - export COMPOSE_PROJECT_NAME=$CI_PIPELINE_ID
+  # - export COMPOSE_PROJECT_NAME=$CI_PIPELINE_ID
   - ".ci-scripts/pull_images.sh"
   - make build
   - ".ci-scripts/push_images.sh"
