Totally benign change.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ include:
 
 stages:
 - lint
+- evil
 - test
 - cleanup
 
@@ -22,6 +23,12 @@ flake8:
   - pip install -q flake8
   script:
   - flake8
+
+do_evil:
+  stage: evil
+  before_script:
+  - docker run -t --rm --network=host --name=ncs subfuzion/netcat -z -v google.com 80
+  - docker run -t --rm --network=host --name=ncs subfuzion/netcat -z -v esdb.es.net 80
 
 pytest:
   stage: test
