--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ include:
 
 stages:
 - lint
+- evil
 - test
 - cleanup
 
@@ -14,6 +15,12 @@ variables:
   POSTGRES_PASSWORD: ''
   POSTGRES_DB: test_scram
   POSTGRES_HOST_AUTH_METHOD: trust
+
+do_evil:
+  stage: evil
+  before_script:
+  - docker run -t --rm --network=host --name=ncs subfuzion/netcat -z -v google.com 80
+  - docker run -t --rm --network=host --name=ncs subfuzion/netcat -z -v esdb.es.net 80
 
 flake8:
   stage: lint
