--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,10 +6,14 @@ updates:
     schedule:
       interval: "weekly"
   - package-ecosystem: pip
-    directory: "/translator"
+    directories:
+    - "/translator"
+    - "/"
     schedule:
       interval: "weekly"
   - package-ecosystem: docker
-    directory: "/"
+    directories:
+      - "/compose/local/"
+      - "/compose/production"
     schedule:
       interval: "weekly"
