--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,19 +1,48 @@
+# Please see the documentation for all configuration options:
+# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
 ---
 version: 2
 updates:
   - package-ecosystem: "github-actions"
+    open-pull-requests-limit: 1000
+    groups:
+      gh-actions-dependencies:
+        patterns:
+          - "*"
     directory: "/"
     schedule:
-      interval: "weekly"
+      interval: "monthly"
   - package-ecosystem: pip
+    groups:
+      django-dependencies:
+        patterns:
+          - "*"
     directories:
-    - "/translator"
     - "/"
+    - "/requirements"
     schedule:
-      interval: "weekly"
-  - package-ecosystem: docker
+      interval: "daily"
+  - package-ecosystem: pip
+    open-pull-requests-limit: 1000
+    groups:
+      translator-dependencies:
+        patterns:
+          - "*"
     directories:
-      - "/compose/local/"
-      - "/compose/production"
+    - "/translator/requirements"
     schedule:
-      interval: "weekly"
+      interval: "daily"
+  - package-ecosystem: docker
+    open-pull-requests-limit: 1000
+    groups:
+      docker-dependencies:
+        patterns:
+          - "*"
+    directories:
+      - "/compose/local/django"
+      - "/compose/local/docs"
+      - "/compose/local/translator"
+      - "/compose/production/django"
+      - "/compose/production/postgres"
+    schedule:
+      interval: "daily"
