--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -87,9 +87,9 @@ services:
       - net.ipv6.conf.all.disable_ipv6=0
     volumes:
       - ./compose/production/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - /etc/scram/ssl/server.crt:/etc/ssl/server.crt
-      - /etc/scram/ssl/server.key:/etc/ssl/server.key
-      - ./staticfiles:/staticfiles:rw,z
+      - /etc/letsencrypt/live/${HOSTNAME}/fullchain.pem:/etc/ssl/server.crt
+      - /etc/letsencrypt/live/${HOSTNAME}/privkey.pem:/etc/ssl/server.key
+      - ./staticfiles:/staticfiles
     ports:
       - "443:443"
       - "80:80"
