--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -3,7 +3,7 @@ name: Run flake8
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ["develop"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
