ci(sast): point to an actual sast tool

--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -16,5 +16,10 @@ sast:
     - name: Check out code
       uses: actions/checkout@v3
 
-    - name: Run SAST
-      run: sast-tool
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: python
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
