--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -1,13 +1,18 @@
 name: Run SAST
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: [ "develop" ]
+    branches:
+      - main
+      - develop
+      - topic/soehlert/github_ci  # Add your branch here
+  pull_request:
+    branches:
+      - main
+      - develop
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  pull_request:
 
 jobs:
   sast:
