--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -3,11 +3,16 @@ name: Run flake8
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["develop"]
+    branches:
+      - main
+      - develop
+  pull_request:
+    branches:
+      - main
+      - develop
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-  pull_request:
 
 jobs:
   flake8:
