ci(coverage): automatically add coverage report to our pull requests

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -65,6 +65,11 @@ jobs:
           name: coverage-report
           path: coverage.xml
 
+      - name: Display Coverage Metrics
+        uses: 5monkeys/cobertura-action@v14
+        with:
+          minimum_coverage: '50'
+
       - name: Stop Services
         if: always()
         run: make stop
