ci(coverage): update coverage configs to focus the MR output

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,10 @@ python_files = [
 
 # ==== Coverage ====
 [tool.coverage.run]
-omit = ["*/migrations/*", "*/tests/*"]
+include = ["scram/*", "config/*", "translator/*"]
+omit = ["**/migrations/*", "scram/contrib/*", "*/tests/*"]
 plugins = ["django_coverage_plugin"]
+
 
 
 # ==== black ====
