--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -37,6 +37,11 @@ jobs:
       - name: Check out the code
         uses: actions/checkout@v4
 
+      - name: Cache Docker images.
+        uses: ScribeMD/docker-cache@0.3.7
+        with:
+          key: docker-${{ runner.os }}-${{ hashFiles('docker-compose.yaml') }}
+
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
       - name: Install Docker Compose
