--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -42,6 +42,14 @@ jobs:
         with:
           key: docker-${{ runner.os }}-${{ hashFiles('docker-compose.yaml') }}
 
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-single-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-single-buildx
+
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
       - name: Install Docker Compose
