Why: Add note about env variables. This makes more sense than trying to drag everything into config files
*

This change addresses the need by:

*

--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -1,6 +1,10 @@
 ---
 version: '3.4'
 
+#
+# environmental variables are defined in the .env file in this repo root
+#
+
 volumes:
   local_postgres_data: {}
   local_postgres_data_backups: {}
