Ignore some things from coverage stats

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,3 +27,13 @@ ignore_errors = True
 [behave]
 paths = scram/route_manager/tests/acceptance
 stderr_capture = no
+
+[coverage:report]
+exclude_also =
+    def __repr__
+    if debug:
+    if self.debug:
+    if settings.DEBUG
+    raise AssertionError
+    raise NotImplementedError
+    if __name__ == .__main__.:
