Fix toml syntax

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,16 +13,17 @@ include = ["scram/*", "config/*", "translator/*"]
 omit = ["**/migrations/*", "scram/contrib/*", "*/tests/*"]
 plugins = ["django_coverage_plugin"]
 branch = true
-data_file = coverage.coverage
+data_file = "coverage.coverage"
 
 [tool.coverage.report]
-exclude_also =
-    if debug:
-    if self.debug:
-    if settings.DEBUG
-    raise AssertionError
-    raise NotImplementedError
-    if __name__ == .__main__.:
+exclude_also = [
+    "if debug:",
+    "if self.debug:",
+    "if settings.DEBUG",
+    "raise AssertionError",
+    "raise NotImplementedError",
+    "if __name__ == .__main__.:",
+    ]
 
 # ==== black ====
 [tool.black]
