--- a/compose.override.production.yml
+++ b/compose.override.production.yml
@@ -27,7 +27,7 @@ services:
     env_file:
       - ./.envs/.production/.postgres
     deploy:
-      replicas: 0
+      replicas: ${POSTGRES_ENABLED:-0}
 
   nginx:
     image: nginx:1.19
