--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -50,8 +50,7 @@ jobs:
 
       - name: Apply unapplied migrations
         env:
-          POSTGRES_USER: scram
-          POSTGRES_DB: test_scram
+          DATABASE_URL: postgres://scram:@postgres:5432/test_scram
         run: |
           python manage.py makemigrations --noinput || true
           UNAPPLIED_MIGRATIONS=$(python manage.py showmigrations --plan | grep '\[ \]' | awk '{print $2}')
@@ -64,14 +63,16 @@ jobs:
           fi
 
       - name: Check for duplicate migrations
+        env:
+          DATABASE_URL: postgres://scram:@postgres:5432/test_scram
         run: |
           if python manage.py makemigrations --dry-run | grep "No changes detected"; then
             echo "No duplicate migrations detected."
           else
             echo "Warning: Potential duplicate migrations detected. Please review."
+          fi
 
       - name: Run Pytest
         env:
-          POSTGRES_USER: scram
-          POSTGRES_DB: test_scram
+          DATABASE_URL: postgres://scram:@postgres:5432/test_scram
         run: pytest
