Add pep8-naming ruff checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ select = [
     "E",     # pycodestyle
     "F",     # pyflakes
     "I",     # isort
+    "N",     # pep8-naming
     "SIM",   # flake8-simplify
     "UP",    # pyupgrade
 ]
