--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,18 +37,29 @@ target-version = 'py312'
 
 [tool.ruff.lint]
 select = [
+    "ASYNC", # flake8-async
     "B",     # flake8-bugbear
     "D",     # pydocstyle
     "E",     # pycodestyle
     "F",     # pyflakes
     "I",     # isort
     "N",     # pep8-naming
+    "S",     # flake8-bandit
     "SIM",   # flake8-simplify
     "UP",    # pyupgrade
 ]
 ignore = [
     "SIM102", # Use a single `if` statement instead of nested `if` statements
     "SIM108", # Use ternary operator instead of `if`-`else`-block
+]
+
+[tool.ruff.lint.per-file-ignores]
+"**/{tests}/*" = [
+    "S101", # use of assert
+    "S106", # hardcoded password
+]
+"test.py" = [
+    "S105", # hardcoded password as argument
 ]
 
 # ==== isort ====
