Add comprehensions and datetimez checks

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,8 +41,10 @@ select = [
     "ASYNC", # flake8-async
     "B",     # flake8-bugbear
     "BLE",   # flake8-blind-except
+    "C4",    # flake8-comprehensions
     "COM",   # flake8-commas
     "D",     # pydocstyle
+    "DTZ",   # flake8-datetimez
     "E",     # pycodestyle
     "F",     # pyflakes
     "FBT",   # boolean-trap
